plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.146'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

// Pryzma 1.x shipped a ModLauncher ITransformationService that swapped whole vanilla
// classes (srg/ payload, libs/pryzma-loader.jar). None of it is part of 2.0: the files
// that still sit on disk are excluded here so they are neither compiled nor packaged.
sourceSets {
    main {
        java {
            exclude 'net/pryzma/neoforge/**'
        }
        resources {
            srcDir 'src/generated/resources'
            exclude '**/*.bbmodel', 'src/generated/**/.cache'
            exclude 'srg/**', 'pryzma/**', 'files.txt', 'patch.cfg', 'patch2.cfg', 'META-INF/services/**'
            // Moved next to its loader: net/pryzma/core/match/flattening_ids.txt.
            exclude 'flattening_ids.txt'
            // Superseded by assets/pryzma/lang/*.json and assets/pryzma/ctm_default/**.
            exclude 'assets/minecraft/optifine/lang/**', 'assets/minecraft/optifine/ctm/**'
        }
    }
    test {
        java {
            exclude 'net/pryzma/neoforge/**'
        }
    }
    // Scripted in-game self-test (net.pryzma.dev). Loaded only by the runSelftest run,
    // never packaged into the mod jar.
    dev {
        java.srcDir 'src/dev/java'
    }
}

repositories {
}

neoForge {
    version = project.neo_version

    // CEM parts extend ModelPart; entity textures read render type internals (see the file).
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')
    validateAccessTransformers = true

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
        }

        selftest {
            client()
            systemProperty 'pryzma.selftest', file('run/selftest.txt').absolutePath
            programArguments.addAll '--width', '1280', '--height', '720'
        }

        configureEach {
            logLevel = org.slf4j.event.Level.INFO
            // Injection counts are validated at load time; a mixin that silently finds no
            // target is reported in the log instead of passing unnoticed.
            systemProperty 'mixin.debug.countInjections', 'true'
            systemProperty 'mixin.debug.verify', 'true'
            systemProperty 'pryzma.audit', 'true'
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
            sourceSet(sourceSets.dev)
        }
    }
}

sourceSets.dev.compileClasspath += sourceSets.main.compileClasspath + sourceSets.main.output
sourceSets.dev.runtimeClasspath += sourceSets.main.runtimeClasspath + sourceSets.main.output

// Plain JUnit over the pure engine classes. main.compileClasspath gives the tests the
// Minecraft/NeoForge types without booting FML.
sourceSets.test.compileClasspath += sourceSets.main.compileClasspath
sourceSets.test.runtimeClasspath += sourceSets.main.compileClasspath

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
    maxHeapSize = '1g'
    testLogging {
        events 'failed'
        exceptionFormat = 'full'
    }
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-Xlint:deprecation', '-Xlint:unchecked'])
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
